Alterado telas de alteracao do Status Cliche e Forma. Inserido Help de Ajuda para os usuários.

--- a/src/gui/Solicitacao_ReparoCliche.form
+++ b/src/gui/Solicitacao_ReparoCliche.form
@@ -158,8 +158,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="masterScrollPane" min="-2" pref="209" max="-2" attributes="0"/>
-              <EmptySpace pref="20" max="32767" attributes="0"/>
+              <Component id="masterScrollPane" pref="218" max="32767" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="clicheLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="clicheField" alignment="3" min="-2" max="-2" attributes="0"/>
