--- a/src/gui/Altera_Cliche.form
+++ b/src/gui/Altera_Cliche.form
@@ -53,7 +53,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+              <EmptySpace pref="60" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="masterScrollPane" min="-2" pref="702" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
@@ -71,7 +71,7 @@
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="obsAlteracaoLabel" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="obsAlteracaoField" min="-2" pref="528" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -116,7 +116,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Component id="masterScrollPane" min="-2" pref="226" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
